--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.51'
+    ext.ANKO_VERSION = '0.10.4'
     repositories {
         google()
         jcenter()
